Sun Oct 23 21:48:15 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/README:

	  Added documentation that describes how to override the default
	  versioned namespace name when ACE_HAS_VERSIONED_NAMESPACE is
	  defined.

	* ace/Version.h:

	  Removed "ace/Versioned_Namespace.h" include directive.  It
	  caused some resource compilers on Windows some grief.

	* ace/Versioned_Namespace.h:

	  Updated required header filename in preprocessor error message.
	  This header should now be included through "ace/config-lite.h".

	* ace/config-lite.h:

	  Include "ace/Version.h" and "ace/Versioned_Namespace.h" to pull
	  in versioned namespace support (disabled by default).

	* ace/post.h:
	* ace/pre.h:

	  Removed versioned namespace support.  Versioned namespace
	  declarations must now be added directly to the appropriate ACE
	  library headers.  Addresses premature closure of versioned
	  namespace.

Sun Oct 23 06:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/bor.mpd:
          Generate new RC_FLAGS with the includes that need to be passed to
          the resource compiler

        * include/makeinclude/build_dll.bor:
        * include/makeinclude/build_exe.bor:
          Use the new RC_FLAGS

Sat Oct 22 11:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Codeset_Registry.h:
          Doxygen improvements

Fri Oct 21 14:28:54 MST 2005  Yan Dai  <dai_y@ociweb.com>

        * bin/MakeProjectCreator/config/csd_pt_test_exe.mpb:

          Added dependency on pi base project since the PI.h is included
          in the test application for the static initialization.

Tue Oct 18 17:24:26 MST 2005  Yan Dai  <dai_y@ociweb.com>

        * bin/msvc_static_order.lst:

          Added TAO/tests/CSD_Strategy_Tests/TP_Common/CSD_TP_Test_Lib.

Fri Oct 21 11:44:33 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * ace/CDR_Stream.h

          Fixed a typo in the optimization description of